--- a/actions-all-repositories/deploy-pre-release.yml
+++ b/actions-all-repositories/deploy-pre-release.yml
@@ -15,13 +15,12 @@ env:
   LC_ALL: en_US.utf-8
   PYTHON_VERSION: '3.10'
   OWNER: eclipse-volttron
-  RUNS_ON: ubuntu-22.04
   POETRY_VERSION: '1.2.2'
 
 jobs:
 
   deploy-pre-release:
-    runs-on: ${{env.RUNS_ON}}
+    runs-on: ubuntu-22.04
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
