added more input variables

--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -8,6 +8,11 @@ on:
         required: false
         default: ''
         type: string
+      first-release-version:
+        description: 'Version number to use if this is the first release'
+        required: false
+        default: 0.1.0rc0
+        type: string
       bump-rule:
         description: 'Bump rule for computing next release version number. Valid choices are: patch, minor, major, prepatch, preminor, premajor, prerelease'
         required: false
@@ -16,8 +21,14 @@ on:
       run-tests-wait:
         description: 'Wait time to run test after merge to main'
         required: false
-        default: 60
+        default: 600
         type: number
+      publish-to-test-pypi:
+        description: 'Set to true if you want to publish to https://test.pypi.org/legacy/ instead of pypi.org'
+        required: false
+        default: false
+        type: boolean
+
     secrets:
       git-token:
         required: true
@@ -136,9 +147,9 @@ jobs:
             poetry version ${{ inputs.bump-rule }} --no-interaction
             
           else
-            # very first release. start with 0.1.0rc0
-            echo "First release. Setting tag as 0.1.0rc1"
-            current_tag=0.1.0rc1
+            # very first release. start with inputs.first-release-version
+            echo "First release. Setting tag as ${{ inputs.first-release-version }}"
+            current_tag=${{ inputs.first-release-version }}
             poetry version ${current_tag}
           fi
           
@@ -204,11 +215,19 @@ jobs:
           token: ${{ secrets.git-token }}
 
       - name: Publish to test pypi
-        id: publish-to-pypi
+        if: ${{ inputs.publish-to-test-pypi }}
         run: |
           poetry config repositories.test-pypi https://test.pypi.org/legacy/
           poetry config pypi-token.test-pypi ${{ secrets.pypi-token }}
-          poetry publish -r test-pypi
+          POETRY_PUBLISH_OPTIONS= "-r test-pypi"
+          echo "POETRY_PUBLISH_OPTIONS=$(echo ${POETRY_PUBLISH_OPTIONS})" >> $GITHUB_ENV
+
+      - name: Publish to test pypi
+        id: publish-to-pypi
+        run: |
+          echo "${POETRY_PUBLISH_OPTIONS}"
+          exit 1
+          #poetry publish -r test-pypi
         continue-on-error: true
 
       - name: if publish to pypi failed revert main and delete release branch
