--- a/actions-all-repositories/deploy-pre-release.yml
+++ b/actions-all-repositories/deploy-pre-release.yml
@@ -14,14 +14,13 @@ env:
   LANG: en_US.utf-8
   LC_ALL: en_US.utf-8
   PYTHON_VERSION: '3.10'
-  PROJECT_NAME: test-release-actions
-  RUNS_ON: ubuntu-22.04
+  OWNER: eclipse-volttron
   POETRY_VERSION: '1.2.2'
 
 jobs:
 
   deploy-pre-release:
-    runs-on: ${{env.RUNS_ON}}
+    runs-on: ubuntu-22.04
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
@@ -121,7 +120,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish pre-release to pypi
-        if: github.repository == "eclipse-volttron/${{env.PROJECT_NAME}}"
+        if: github.repository_owner == "${{env.OWNER}}"
         run: |
           poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
           poetry publish
