--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: test
         run: |
-          echo ${{ inputs }}
+          echo ${{ inputs.publish-to-test-pypi }}
           exit 1
       #----------------------------------------------
       #       check-out repo and set-up python
