--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -57,16 +57,14 @@ jobs:
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
 
       - name: Bump Version
+        if: github.events.inputs.release-version != ''
         run: |
-          # current_tag is the last tagged release in the repository.   From there
-          # we need to remove the v from the beginning of the tag.
-          echo "Bump rule is ${{ inputs.bump-rule }}"
-          echo "Given release version is ${{ inputs.release-version }}"
-          if [ -z ${{ inputs.release-version }} ] ; then
             echo "got version"
-          else
-            echo "compute version"
-          fi
+            exit 1
+      - name: Bump Version
+        if: github.events.inputs.release-version == ''
+        run: |
+          echo "use bump rule"
           exit 1
       #----------------------------------------------
       #       check-out repo and set-up python
